--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-flickity-component": "^3.1.0",
+    "react-scripts": "2.1.3",
+    "react-slick": "^0.23.2",
+    "react-truncate": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
