--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flickity": "^2.1.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-flickity-component": "^3.1.0",
     "react-scripts": "2.1.3",
-    "react-slick": "^0.23.2",
     "react-truncate": "^2.4.0"
   },
   "scripts": {
