--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "flickity": "^2.1.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
-    "react-truncate": "^2.4.0"
+    "react-truncate": "^2.4.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
